pagina home del sitio

--- a/frical/templates/base.html
+++ b/frical/templates/base.html
@@ -1,10 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load compress %}{% load staticfiles %}{% load i18n %}<!DOCTYPE html>
+<html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<meta name='language' content='ES'>
+	<meta name="author" content="Cristian Sepulveda, cris.andrs@gmail.com">
+	<meta name='robots' content='index, follow'>
+	<meta name="twitter:creator" content="@airsoull">
 	
+	<title>Frical</title>
+
+	<link rel="shortcut icon" href="{% static 'images/gt_favicon.png' %}">
+
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+	{% compress css %}
+	<link rel="stylesheet" href="{% static 'css/magister.css' %}">
+	{% endcompress %}
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
+</head>
+
+<body class="theme-invert">
+	
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+    	<div class="navbar-header">
+        	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            	<span class="sr-only">Toggle navigation</span>
+            	<span class="icon-bar"></span>
+            	<span class="icon-bar"></span>
+            	<span class="icon-bar"></span>
+          	</button>
+          	<a class="navbar-brand" href="{% url 'home' %}">FRICAL</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+         	<ul class="nav navbar-nav">
+            	<li><a href="#about">{% trans "clientes" %}</a></li>
+            	<li><a href="#contact">{% trans "contacto" %}</a></li>
+          	</ul>
+        </div>
+  	</div>
+</nav>
+
+
+<div class="container">
+	<div class="row">
+		{% block content %}{% endblock content %}
+	</div>
+</div>
+
+<script src="{% static 'js/jquery-2.1.3.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/modernizr.custom.72241.js' %}"></script>
+<script src="{% static 'js/magister.js' %}"></script>
 </body>
 </html>
