--- a/frical/static/css/magister.css
+++ b/frical/static/css/magister.css
@@ -1,5 +1,5 @@
 html {
-	background:#505D6E url(/static/images/body6.jpg) no-repeat center center fixed; 
+	background:#505D6E url(../images/body6.jpg) no-repeat center center fixed; 
 	min-height:100%;
 	-webkit-background-size: cover;
 	   -moz-background-size: cover;
