--- a/frical/static/css/magister.css
+++ b/frical/static/css/magister.css
@@ -32,6 +32,45 @@ body {
 	text-transform: uppercase;
 }
 
+ul.nav.navbar-nav li a{
+	color: #FFF;
+}
+
+.white {
+	color: #FFF;
+}
+
+.formal-white{
+	color: #FFF;
+	font-family: 'Wire One', Helvetica, Arial, sans-serif;
+	line-height: 0.9em;
+	font-size: 30px;
+	font-weight: 700;
+}
+
+.btn-contact{
+	font-size: 35px;
+	background-color: #006699;
+	line-height: 0.9em;
+	font-weight: 700;
+	float: right;
+}
+
+.ul-contact{
+	list-style:none;
+}
+
+.upper{
+	text-transform: capitalize;
+	font-weight: bold;
+	letter-spacing: 0.3em;
+}
+
+#gmap{
+	width: 100%;
+	height: 50%;
+}
+
 /********************************************************/
 /*                    Navigation bar                    */
 /********************************************************/
