--- a/frical/templates/base.html
+++ b/frical/templates/base.html
@@ -1,15 +1,15 @@
-{% load compress %}{% load staticfiles %}{% load i18n %}<!DOCTYPE html>
+{% load sekizai_tags %}{% load compress %}{% load staticfiles %}{% load i18n %}<!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="">
+	<meta name="description" content="{{ current_site.config.description }}">
 	<meta name='language' content='ES'>
 	<meta name="author" content="Cristian Sepulveda, cris.andrs@gmail.com">
 	<meta name='robots' content='index, follow'>
 	<meta name="twitter:creator" content="@airsoull">
 	
-	<title>Frical</title>
+	<title>{% block title %}{{ current_site.name }}{% endblock title %}</title>
 
 	<link rel="shortcut icon" href="{% static 'images/gt_favicon.png' %}">
 
@@ -32,20 +32,21 @@
             	<span class="icon-bar"></span>
             	<span class="icon-bar"></span>
           	</button>
-          	<a class="navbar-brand" href="{% url 'home' %}">FRICAL</a>
+          	<a class="navbar-brand" href="{% url 'home' %}">{{ current_site.name }}</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
          	<ul class="nav navbar-nav">
             	<li><a href="#about">{% trans "clientes" %}</a></li>
-            	<li><a href="#contact">{% trans "contacto" %}</a></li>
+            	<li><a href="{% url 'contact_form_view' %}">{% trans "contacto" %}</a></li>
           	</ul>
         </div>
   	</div>
 </nav>
 
-
 <div class="container">
+	{% block before_content %}{% endblock before_content %}
 	<div class="row">
+	</br></br>
 		{% block content %}{% endblock content %}
 	</div>
 </div>
@@ -54,5 +55,6 @@
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/modernizr.custom.72241.js' %}"></script>
 <script src="{% static 'js/magister.js' %}"></script>
+{% render_block "js" %}
 </body>
 </html>
