--- a/frical/templates/home/home.html
+++ b/frical/templates/home/home.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">	
-	</br></br>
-	<h1 class="title">Frical</h1>
-	<h2 class="subtitle">Servicios e instalaciones de aire acondicionado</h2>
-	
+<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">
+	<h1 class="title">{{ current_site.name }}</h1>
+	<h2 class="subtitle">{{ current_site.config.description }}</h2>	
 </div>
 {% endblock content %}
