--- a/frical/templates/contacts/contact_form.html
+++ b/frical/templates/contacts/contact_form.html
@@ -39,8 +39,8 @@
 	
 
 	{% addtoblock "js" %}
-		<script src="https://maps.google.com/maps/api/js?sensor=true"></script>
-		<script src="{% static 'js/gmaps.js' %}"></script>
+		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+		<script src="http://www.welancers.com/cc/jquery_map_marker/mapmarker.jquery.js"></script>
 		<script src="{% static 'js/map.js' %}"></script>
 	{% endaddtoblock %}
 
