--- a/frical/templates/contacts/contact_form.html
+++ b/frical/templates/contacts/contact_form.html
@@ -10,6 +10,7 @@
 
 {% block before_content %}
 <div id="gmap">
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3326.196521760487!2d-70.65065040000003!3d-33.5222758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662daf20fb93f43%3A0x9c5a1d6040e23c7a!2sIquique+6885%2C+La+Cisterna%2C+Regi%C3%B3n+Metropolitana%2C+Chile!5e0!3m2!1ses!2s!4v1427853536022" width="100%" height="300" frameborder="0" style="border:0"></iframe>
 </div>
 {% endblock before_content %}
 
@@ -36,12 +37,5 @@
 	</form>
 	</br></br>
 </div>
-	
-
-	{% addtoblock "js" %}
-		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-		<script src="http://www.welancers.com/cc/jquery_map_marker/mapmarker.jquery.js"></script>
-		<script src="{% static 'js/map.js' %}"></script>
-	{% endaddtoblock %}
 
 {% endblock content %}
