--- a/frical/templates/base.html
+++ b/frical/templates/base.html
@@ -36,7 +36,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
          	<ul class="nav navbar-nav">
-            	<li><a href="#about">{% trans "clientes" %}</a></li>
+         		<li><a href="#about">{% trans "clientes" %}</a></li>
+         		<li><a href="{% url 'jobs_list_view' %}">{% trans "trabajos" %}</a></li>
             	<li><a href="{% url 'contact_form_view' %}">{% trans "contacto" %}</a></li>
           	</ul>
         </div>
