--- a/frical/templates/jobs/job_list.html
+++ b/frical/templates/jobs/job_list.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
+{% block title %}
+	{% trans "Trabajos realizados" %}
+{% endblock title %}
+
 {% block content %}
 <div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center formal-white">
 	<div class="list-group">
 		{% for job in job_list %}
-			<a href="#">{{ job.name }} <img src="{{ job.image.small_url }}" alt="{{ job.name }}"></a>
+			<a href="#">{{ job.name }} <img src="{{ job.image.small_url }}" alt="{{ job.name }}"></a> <br>
 		{% endfor %}
 	</div>
 </div>
