--- a/frical/templates/jobs/job_list.html
+++ b/frical/templates/jobs/job_list.html
@@ -2,14 +2,14 @@
 {% load i18n %}
 
 {% block title %}
-	{% trans "Trabajos realizados" %}
+	{% trans "Trabajos Realizados" %}
 {% endblock title %}
 
 {% block content %}
 <div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center formal-white">
 	<div class="list-group">
-		{% for job in job_list %}
-			<a href="#">{{ job.name }} <img src="{{ job.image.small_url }}" alt="{{ job.name }}"></a> <br>
+		{% for job in job_list|dictsort:"order" %}
+			<a href="{{ job.get_absolute_url }}">{{ job.name }} <img src="{{ job.image.small_url }}" alt="{{ job.name }}"></a> <br>
 		{% endfor %}
 	</div>
 </div>
