detail job con galleria

--- a/frical/templates/base.html
+++ b/frical/templates/base.html
@@ -19,6 +19,7 @@
 	{% endcompress %}
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link href='http://fonts.googleapis.com/css?family=Wire+One' rel='stylesheet' type='text/css'>
+	{% render_block "css" %}
 </head>
 
 <body class="theme-invert">
