--- a/frical/templates/home/home.html
+++ b/frical/templates/home/home.html
@@ -2,7 +2,13 @@
 
 {% block content %}
 <div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">
-	<h1 class="title">{{ current_site.name }}</h1>
+	<h1 class="title">
+		{% if current_site.config.logo_active %}
+			<img src="{{ current_site.config.logo_original_url }}" alt="{{ current_site.name }}">
+		{% else %}
+			{{ current_site.name }}
+		{% endif %}
+	</h1>
 	<h2 class="subtitle">{{ current_site.config.description }}</h2>	
 </div>
 {% endblock content %}
