--- a/frical/templates/base.html
+++ b/frical/templates/base.html
@@ -11,7 +11,7 @@
 	
 	<title>{% block title %}{{ current_site.name }}{% endblock title %}</title>
 
-	<link rel="shortcut icon" href="{% static 'images/gt_favicon.png' %}">
+	<link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
 
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
 	{% compress css %}
