--- a/frical/templates/404.html
+++ b/frical/templates/404.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h1>404</h1>
+<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">
+	<h1 class="title">404</h1>
+</div>
 {% endblock content %}
